# depr-mmdet-plugin

./: .gitmodules  CMakeLists.txt  replace_strs.sh
